overflow errors fixed

--- a/src/App.css
+++ b/src/App.css
@@ -493,7 +493,7 @@ form > input[type="submit"]:hover {
 }
 .navbar-btn {
   padding: 10px;
-  background-color: #fa3939;
+  background-color: #D22B2B;
   border-radius: 10px;
   transition: 0.2s all ease-in-out;
   box-shadow: 0 8px 32px 0 rgba(135, 47, 31, 0.6);
@@ -573,7 +573,7 @@ form > input[type="submit"]:hover {
   font-size: 30px;
   margin-top: 30px;
   padding: 10px;
-  background-color: #fa3939;
+  background-color: #D22B2B;
   border-radius: 10px;
   box-shadow: 0 8px 32px 0 rgba(135, 47, 31, 0.6);
   margin-bottom: 20px;
